--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://examplesite.com
+baseURL: https://gorgeous-daifuku-66928d.netlify.app/
 title: OMEGA
 theme: omega-hugo
 googleAnalytics: ''
